--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Java Compiler</title>
+<br> Run public class Main </br>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
